# MARIAM

./: .gitignore  .gitmodules  README.md  mariam_install.sh  resistor_tests.md
analysis/: Experiment 0.5 Trial 1  Experiment 0.5 Trial 4  pid_tuning.ipynb
analysis/Experiment 0.5 Logbook plots/: Experiment .5 Trial 5  Experiment_0-5_Plots.xml  experiment_plots.ipynb
analysis/arm_controller_delay/: delay.ipynb  delay_times.ipynb  profile.ipynb  servo_motor_delay.ipynb
analysis/fsrAnalysis/: fsrCalibrationAverage-2200Ohm.csv  fsrCalibrationAverageCalculation.m  fsrCalibrationAverages1.csv  fsrCalibrationAverages_only1k.csv  fsrCalibrationTests-2200Ohm.csv  fsrCalibrationThirdDegree.m  fsrCalibrationThirdDegreeFit_calvin.m  fsr_calibration_average_calculation.m  fsr_calibration_averages-2200Ohm.csv  fsr_calibration_third_degree_fit.m  fsr_calibration_trials-2200Ohm.csv
analysis/odomDataAnalysis/: converter.sh  createPlotsFromOdomCSV.py  rtab_odometry.ipynb
analysis/odometry_analysis/: rtab_odometry.ipynb
analysis/vicon_experiments/: distance_box_plot_generator.ipynb  raw_data_plot_generator.ipynb  traj_forces_plot.ipynb  vicon_experiments.ipynb
arduino/: TeensySetup.md
arduino/1d_wheel_control/: 1d_wheel_control.ino
data/: 08-25_notes.ods  08-30_notes.ods
doc/: CurrentHardware.md  ExperimentDescriptions.md  HardwareMods.md  OdomBenchmark.md  Swarmie_GiAnts, Dragonfly, Laptop & Desktop Inventory.xlsx  XSArmCommands.md  current_hardware.md  experiment_0_descriptions.md  odom_benchmark.md  old_setup.md  plotjuggler_guide  plotjuggler_guide.md  resistor_tests.md  xs_arm_commands.md
microcontroller/: teensy_setup.md
misc/: ArdunioConversion.fzz  interbotix.sh  playbook_humble_install.yaml  playbook_submodule_edits.yaml  start_robot.sh
models/: NUCCover_wall.ipt
script/: apply_rules.sh  mariam_install.sh  naive_experiment.sh  robot_manager.sh  run_experiment.sh  setup_and_start_robot.sh  start_micro_ros_agent.sh  start_robot.sh  startup_robot.sh  vicon_start_ros2_bag.sh
src/arm_controller/: CMakeLists.txt  README.md  package.xml
src/arm_controller/config/: admittance_control.yaml  domain_bridge.yaml  modes.yaml  ompl_planning.yaml
src/arm_controller/launch/: admittance_controller.launch.py  moveit_joy.launch.py  moveit_joy_constrained.launch.py  px100_controller.launch.py  sine_wave_test.launch.py  xsarm_joy.launch.py  xsarm_joy_nojoy_noxsarmjoy.launch.py  xsarm_moveit.launch.py  xsarm_moveit_joy.launch.py  xsarm_moveit_listener.launch.py
src/arm_controller/msg/: ConstrainedPose.msg  PathAndExecutionTiming.msg
src/arm_controller/scripts/: px100_controller.py  xsarm_ikpy_robot.py  xsarm_robot.py
src/arm_controller/src/: admittance_controller.cpp  admittance_rviz_markers.cpp  box_pickup_listener_moveit.cpp  constraint_experiment.cpp  ellipse_publisher.cpp  experiment.cpp  experiment1.cpp  force_listener.cpp  force_publisher.cpp  heading_publisher.cpp  high_freq_pose_publisher.cpp  joint_delay_tracker.cpp  joy_input_handler.cpp  joy_moveit.cpp  joy_moveit_constrained.cpp  joy_pose_update.cpp  lifting_node.cpp  pos_control_moveit_interface.cpp  pose_publisher.cpp  pose_updater.cpp  sine_wave_publisher.cpp  virtual_pose_publisher.cpp
src/bridge/: CMakeLists.txt  package.xml
src/bridge/include/: usbSerial.h
src/bridge/src/: abridge.cpp  usbSerial.cpp
src/bridge_msg/: CMakeLists.txt  package.xml
src/bridge_msg/msg/: PidState.msg
src/mariam_dynamic_parameterization/: CMakeLists.txt  package.xml
src/mariam_dynamic_parameterization/config/: parameterizer.yaml
src/mariam_dynamic_parameterization/launch/: dynamic_parameterization.launch.py
src/mariam_dynamic_parameterization/src/: agent_displacement_estimator.cpp  analytical_parameterizer.cpp  centralized_parameterizer.cpp  distributed_parameterizer.cpp  vicon_agent_displacement_estimator.cpp
src/mariam_gazebo/: CMakeLists.txt  README.md  package.xml
src/mariam_gazebo/launch/: basic_mobile_robot_gazebo_spawn.launch.py  mariam_gazebo.launch.py  mariam_gazebo_navstack_map.launch.py  mariam_gazebo_navstack_slam.launch.py  mariam_gazebo_spawn_sdf.launch.py  mariam_gazebo_spawn_urdf.launch.py  mariam_gazebo_urdf.launch.py  px100_gazebo.launch.py  spawn_robot.launch.py
src/mariam_gazebo/scripts/: px100_controller_gazebo.py
src/mariam_gazebo/src/: command_node.cpp  force_sensor.cc
src/mariam_gazebo/world/mariam_agent_world/: empty.world
src/mariam_gazebo/worlds/: shapes.world
src/mariam_navigation/: CMakeLists.txt  README.md  package.xml
src/mariam_navigation/config/: ekf.yaml  ekf_hardware.yaml  ekf_testing.yaml  nav2_navigation_params.yaml  nav2_params.yaml  pid_params.yaml  slam_params.yaml  trajectory_params.yaml
src/mariam_navigation/figures/: trial_0_trajectory_error_plot.png_trajectory_data.csv
src/mariam_navigation/include/: cubic_polynomial.hpp  cubic_spline.hpp  pid_controller.hpp
src/mariam_navigation/launch/: hardware_ekf.launch.py  nav2.launch.py  nav2_custom_bringup.launch.py  slam.launch.py  trajectory_generator.launch.py
src/mariam_navigation/mobility/: driver2.py  wheel_odom.py
src/mariam_navigation/msg/: TrajectoryPoint.msg
src/mariam_navigation/scripts/: coop_traj_api.py  coop_traj_api_v2.py  coop_traj_node.py  coop_traj_pub.py  coop_traj_publisher.py  coop_traj_viz.py  example.py  trajectory_generator.py
src/mariam_navigation/src/: coop_traj_ff_pid.cpp  coop_traj_pid.cpp  dual_cmd_vel_distance.cpp  dual_curved_constant_velocity.cpp  dual_linear_constant_velocity_closed_loop.cpp  dual_linear_constant_velocity_open_loop.cpp  dual_linear_sinusoidal_acceleration_open_loop.cpp  dual_linear_sinusoidal_velocity_open_loop.cpp  dual_waypoint_publisher.cpp  experiment_dual_waypoint_publisher.cpp  hermite_path_generator.cpp  robot_follower.cpp  swarmie.py  synchronized_trajectory_controller.cpp  trajectory_follower.cpp  vicom_dual_linear_constant_velocity_open_loop.cpp
src/mariam_slam/: package.xml  setup.cfg  setup.py
src/mariam_slam/launch/: imu.launch.py  realsense_example.launch.py  realsense_imu.launch.py  realsense_robot.launch.py
(+431 files in other folders)
