<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="cjstahoviak@gmail.com">calvinjs</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_ros_planning_interface</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>joy</depend>
  <depend>geometry_msgs</depend>
  <depend>interbotix_moveit_interface</depend>
  <depend>interbotix_moveit_interface_msgs</depend>
  <depend>interbotix_xs_msgs</depend>

  <!--From launch file source package-->
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_simple_controller_manager</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>moveit_setup_assistant</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>

  <depend>interbotix_xs_modules</depend>
  <depend>interbotix_xsarm_sim</depend>
  <depend>interbotix_xsarm_descriptions</depend>
  <depend>interbotix_xsarm_ros_control</depend>

  <!-- For custom messages -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
